<resources>
    <string name="app_name">chat-android</string>
    <string name="title_login">Pagina di login</string>
    <string name="title_signup">Crea un nuovo profilo</string>
    <string name="go_to_signup">Non sei ancora registrato? <u>Registrati</u></string>
    <string name="go_to_login">Sei già registrato? <u>Accedi</u></string>

    <string name="submit">Invia</string>
    <string name="signout">Esci</string>
    <string name="search">Cerca</string>
    <string name="settings">Impostazioni</string>
    <string name="cancel">Annulla</string>
    <string name="delete">Elimina</string>
    <string name="error">Errore</string>
    <string name="ok">Ok</string>
    <string name="rooms">Stanze</string>
    <string name="you">Tu</string>
    <string name="photo">Foto</string>
    <string name="video">Video</string>

    <string name="error_empty_fields">Compila tutti i campi</string>
    <string name="error_password_too_short">La password deve avere almeno 6 caratteri</string>
    <string name="error_user_not_found">Account non trovato</string>
    <string name="error_wrong_auth">Credenziali errate</string>
    <string name="error_email_already_exists">Questa email è già registrata</string>
    <string name="error_invalid_email_format">Formato email non valido</string>
    <string name="error_registration_failed">Registrazione fallita</string>
    <string name="error_weak_password">La password è troppo semplice</string>
    <string name="error_user_not_authenticated">Autenticazione richiesta</string>
    <string name="success_login">Login effettuato!</string>
    <string name="success_signup">Registrazione completata!</string>

    <string name="general_info">Informazioni generali</string>
    <string name="access">Accesso</string>
    <string name="security">Sicurezza</string>
    <string name="delete_account">Elimina profilo</string>
    <string name="user_profile">Profilo utente</string>
    <string name="info_username_format">Username: %1$s</string>
    <string name="info_email_format">Email: %1$s</string>
    <string name="info_uid_format">UID: %1$s</string>
    <string name="info_timestamp_format">Account creato il: %1$s</string>
    <string name="rooms_counter">(%1$d)</string>

    <string name="fab_view_all_rooms">Visualizza tutte le stanze</string>
    <string name="fab_view_created_rooms">Visualizza le stanze create</string>
    <string name="fab_view_joined_rooms">Visualizza le stanze attive</string>
    <string name="fab_create_new_room">Crea una nuova stanza</string>

    <string name="text_all_rooms">Tutte le stanze (%1$d)</string>
    <string name="text_created_rooms">Le tue stanze create (%1$d)</string>
    <string name="text_joined_rooms">Stanze di cui fai parte (%1$d)</string>

    <string name="confirm_delete_account">Sei sicuro? Questa azione è irreversibile e cancellerà tutti i tuoi dati.</string>
    <string name="confirm_delete_room">Sei sicuro di voler eliminare definitivamente questa stanza?</string>
    <string name="room_deleted_success">La stanza è stata eliminata con successo!</string>

    <string name="partecipants">Partecipanti: %1$d</string>
    <string name="owner">Proprietario</string>
    <string name="creator_name">Creatore: %1$s</string>
    <string name="creator_uid">UID creatore: \n%1$s</string>
    <string name="room_info">Informazioni stanza</string>
    <string name="join_and_start_discussion">Entra e inizia la discussione</string>
    <string name="leave_room">Esci dalla stanza</string>
    <string name="delete_room">Elimina la stanza</string>

    <string name="create_room_action">Crea stanza</string>
    <string name="create_room_title">Creazione della stanza</string>
    <string name="room_name_placeholder">Nome stanza</string>
    <string name="room_name_hint">Inserisci un nome univoco per la stanza</string>
    <string name="error_empty_room_name">Il nome non può essere vuoto</string>
    <string name="success_create_new_room">Stanza creata con successo!</string>
    <string name="error_retrieve_room">Errore caricamento stanza</string>

    <string name="chat_room_title">Stanza di chat: %1$s</string>
    <string name="write_message">Scrivi &#8230;</string>
    <string name="delete_message_title">Elimina messaggio</string>
    <string name="delete_message_confirm">Sei sicuro di voler eliminare questo messaggio?</string>

    <string name="dialog_camera_title">Scegli contenuto</string>
    <string name="error_camera_permission">Permesso fotocamera necessario per continuare</string>
</resources>


