<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/included_app_bar"
        layout="@layout/app_bar" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_details"
        style="@style/Widget.Material3.CardView.Elevated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/included_app_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/text_room_name"
                style="@style/TextAppearance.Material3.HeadlineMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="[Nome Stanza]" />

            <TextView
                android:id="@+id/text_creator_name"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/creator_name"
                android:textColor="?attr/colorOutline" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"
                android:background="?attr/colorOutlineVariant" />

            <TextView
                style="@style/TextAppearance.Material3.TitleSmall"
                android:id="@+id/text_partecipants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/partecipants"
                android:textAllCaps="true" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:chipSpacing="8dp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_action"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/join_and_start_discussion" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete_room"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:text="@string/delete_room"
            android:textColor="?attr/colorError"
            app:iconTint="?attr/colorError" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>